# git

./: .rustfmt.toml  Cargo.toml  README.md  object_structure.md
.github/workflows/: ci.yml
src/: index.rs  index_format.md  main.rs  utils.rs
src/commands/: cat_file.rs  hash_object.rs  init.rs  mod.rs  show_ref.rs
src/utils/: env.rs  hex.rs  mod.rs  objects.rs  test.rs
